--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">کد خوان</string>
+    <string name="app_name">کد خوانِ SMS</string>
     <string name="copied_to_clipboard">%s کد کپی شد.</string>
     <string name="no_permission">بدون مجوزِ «خواندن پیامک» این برنامه نمی‌تواند کاری انجام دهد!</string>
     <string name="app_use_case">این برنامه پیامک‌های حاوی رمز(شامل رمز پویا و یکبار مصرف) را تشخیص داده و رمز را برای شما کُپی می‌کند، تا در صورت نیاز آنرا در برنامه‌ یا سایت مورد نظر جایگذاری کنید.</string>
